# chan_tdx_plugin

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CMakeLists_minimal.txt  CZSC.ini  ISSUE.md  LICENSE  README.md  agent.md  build.bat  build_mingw.bat  chan.def  chan.sln  chan.vcxproj  chan_min.def  通达信DLL问题诊断与解决方案.md
docs/: API.md  CHANGELOG.md  INSTALL.md  README.md  USAGE.md
examples/: 一买选股.tn6  强势买点选股.tn6  缠论中枢.tn6  缠论买卖点.tn6  缠论分型.tn6
formulas/: 缠论中枢.txt  缠论中枢调试.txt  缠论买卖点.txt  缠论分型.txt  缠论完整指标.txt  缠论测试.txt  缠论笔.txt  诊断公式.txt
include/: chan_core.h  chan_types.h  config_reader.h  logger.h  tdx_interface.h
src/: chan_core.cpp  config_reader.cpp  dllmain.cpp  logger.cpp  tdx_interface.cpp  tdx_minimal.cpp  tdx_standard.cpp
test/: test_chan_core.cpp
